Refactor dotfiles: remove conda initialization, update git configuration, enhance scripts, and add new utilities

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,7 @@
 [user]
 	name = Declan
 	email = 199662174+declanhuggins@users.noreply.github.com
+[init]
+	defaultBranch = main
+[core]
+	excludesfile = /Users/hugs/.gitignore
