--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -5,3 +5,7 @@ LICENSE
 {{ if ne .chezmoi.os "darwin" }}
 Scripts/**
 {{ end }}
+
+{{ if eq .chezmoi.os "darwin" }}
+.local/share/konsole/**
+{{ end }}
