--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -2,6 +2,11 @@ README.md
 LICENSE
 .setup/**
 
+# --- 1Password config (ignored if not using 1Password) ---
+{{ if not .use1Password }}
+.config/1Password
+{{ end }}
+
 # --- macOS-only scripts (ignored on Linux) ---
 {{ if ne .chezmoi.os "darwin" }}
 scripts/convert.sh
